--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@ body{
     }
 
     .apresentacao_links_navegacao{
-        width: auto;
-        padding: auto;
+        width: 70%;
+       
     }
 }
